Add visualization description

--- a/General/visualizing-learning-outcomes/visualizing-learning-outcomes.ipynb
+++ b/General/visualizing-learning-outcomes/visualizing-learning-outcomes.ipynb
@@ -777,9 +777,29 @@
    "source": [
     "$\\uparrow \\ $ Ordering the matrix \"`by Outcome`\" groups specific learning outcomes with general outcomes, as desired.\n",
     "\n",
-    "We may reorder the matrix \"`by Frequency`\" using the dropdown menu to see which learning outcomes have more overlap between processes.\n",
+    "We may reorder the matrix \"`by Frequency`\" using the dropdown menu to see which learning outcomes have more overlap between processes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If any two specific outcomes emerge from the same general outcome, they are endowed with a colour.\n",
     "\n",
-    "White spaces indicate **no** pairwise overlap between learning outcomes."
+    "The greyscale colouring, then, is assigned to pairs of specific outcomes that emerge from different general outcomes, but share similar processes.\n",
+    "\n",
+    "The opacity of any cell quantifies its relative overlap with the processes of another cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The colourless region is significant, as it reflects the interplay between general outcomes.\n",
+    "\n",
+    "For example, observe above that outcomes `AN5: Perform operations on rational expressions` and `RF7: Solve problems that involve linear and quadratic inequalities in two variables` have no overlap with respect to their processes.\n",
+    "\n",
+    "We may compare the processes of `AN5`, `\"Communication | Problem Solving | Technology | Visualization,\"` with those of `RF7`, `\"Connections | Mental Mathematics and Estimation | Reasoning,\"` to see that, indeed, there is **no** pairwise overlap."
    ]
   },
   {
