Added magnify demo

--- a/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import os.path\n",
     "import sys\n",
     "from random import randint\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from IPython.display import display, Math, Latex, clear_output, HTML"
    ]
   },
   {
@@ -43,10 +44,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script type=\"text/javascript\" src=\"scripts/processing.min.js\"></script> \n",
+       "<script type=\"text/javascript\">\n",
+       "  var processingCode = ` \n",
+       "PImage mascara;  \n",
+       "PImage magnified, normal;\n",
+       "\n",
+       "void setup() {\n",
+       "  size(400, 400);\n",
+       " // mascara=createGraphics(300, 300);\n",
+       "  makeImages();\n",
+       "  background(255);\n",
+       "  noCursor();\n",
+       "}\n",
+       "\n",
+       "\n",
+       "void makeImages() {  //draw and store the two images that will be used\n",
+       "  noStroke();\n",
+       "  translate(width/2, height/2);\n",
+       "  alvos();\n",
+       "  normal=get(); \n",
+       "  scale(1.5);\n",
+       "  alvos();\n",
+       "  magnified=get();\n",
+       "}\n",
+       "\n",
+       "void alvos() {\n",
+       "  background(255);\n",
+       "  for (int i=5; i>0; i--) {\n",
+       "    fill(200, 0, 0);\n",
+       "    ellipse(0, 0, i*40, i*40);\n",
+       "    fill(255);\n",
+       "    ellipse(0, 0, i*40-20, i*40-20);\n",
+       "  }\n",
+       "}\n",
+       "\n",
+       "void draw() {\n",
+       "\n",
+       "  //this draws a circle in an alternate canvas that will be the mask\n",
+       "\n",
+       "background(255);\n",
+       "fill(0);\n",
+       "ellipse(mouseX, mouseY, 80, 80);\n",
+       "mascara=get();\n",
+       "  //mascara.endDraw();\n",
+       "  normal.mask(mascara);  //aplies the mask to the image, the image now has a hole on it\n",
+       "\n",
+       "  background(255);\n",
+       "  image(magnified, -(mouseX-width/2)/1.9, -(mouseY-height/2)/1.9);   //draws the magnified image underneath the normal image and adjusts its position \n",
+       "  image(normal, 0, 0);   //draws the normal image\n",
+       "\n",
+       "  strokeWeight(5);\n",
+       "  noFill();\n",
+       "  stroke(150, 0, 0);\n",
+       "  ellipse(mouseX, mouseY, 80, 80); // draws the \"lens circle\"\n",
+       "}\n",
+       "`;\n",
+       "  var myCanvas = document.getElementById(\"canvas1\");\n",
+       "  var jsCode = Processing.compile(processingCode);\n",
+       "  var processingInstance = new Processing(myCanvas, jsCode);\n",
+       " </script>\n",
+       "<canvas id=\"canvas1\"> </canvas>    \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "magnify = \"\"\" \n",
+    "PImage mascara;  \n",
+    "PImage magnified, normal;\n",
+    "\n",
+    "void setup() {\n",
+    "  size(400, 400);\n",
+    " // mascara=createGraphics(300, 300);\n",
+    "  makeImages();\n",
+    "  background(255);\n",
+    "  noCursor();\n",
+    "}\n",
+    "\n",
+    "\n",
+    "void makeImages() {  //draw and store the two images that will be used\n",
+    "  noStroke();\n",
+    "  translate(width/2, height/2);\n",
+    "  alvos();\n",
+    "  normal=get(); \n",
+    "  scale(1.5);\n",
+    "  alvos();\n",
+    "  magnified=get();\n",
+    "}\n",
+    "\n",
+    "void alvos() {\n",
+    "  background(255);\n",
+    "  for (int i=5; i>0; i--) {\n",
+    "    fill(200, 0, 0);\n",
+    "    ellipse(0, 0, i*40, i*40);\n",
+    "    fill(255);\n",
+    "    ellipse(0, 0, i*40-20, i*40-20);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "void draw() {\n",
+    "\n",
+    "  //this draws a circle in an alternate canvas that will be the mask\n",
+    "\n",
+    "background(255);\n",
+    "fill(0);\n",
+    "ellipse(mouseX, mouseY, 80, 80);\n",
+    "mascara=get();\n",
+    "  //mascara.endDraw();\n",
+    "  normal.mask(mascara);  //aplies the mask to the image, the image now has a hole on it\n",
+    "\n",
+    "  background(255);\n",
+    "  image(magnified, -(mouseX-width/2)/1.9, -(mouseY-height/2)/1.9);   //draws the magnified image underneath the normal image and adjusts its position \n",
+    "  image(normal, 0, 0);   //draws the normal image\n",
+    "\n",
+    "  strokeWeight(5);\n",
+    "  noFill();\n",
+    "  stroke(150, 0, 0);\n",
+    "  ellipse(mouseX, mouseY, 80, 80); // draws the \"lens circle\"\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "html_template = \"\"\"\n",
+    "<script type=\"text/javascript\" src=\"scripts/processing.min.js\"></script> \n",
+    "<script type=\"text/javascript\">\n",
+    "  var processingCode = `{}`;\n",
+    "  var myCanvas = document.getElementById(\"canvas1\");\n",
+    "  var jsCode = Processing.compile(processingCode);\n",
+    "  var processingInstance = new Processing(myCanvas, jsCode);\n",
+    " </script>\n",
+    "<canvas id=\"canvas1\"> </canvas>    \n",
+    "\"\"\"\n",
+    "\n",
+    "html_code = html_template.format(magnify)\n",
+    "HTML(html_code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The magnifying glass makes things bigger because it uses a **convex** lens. **Convex** lenses work by bending light. Starting from a light source, light rays travel outward and reflect off of things. As the reflected light passes through a convex lens, the light rays bend to get closer together. Let's look at a picture of how this works."
+   ]
   },
   {
    "cell_type": "code",
