Added body text

--- a/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Formation of real images."
+    "# Formation of real images Geogebra applet."
    ]
   },
   {
@@ -249,7 +249,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploring the Human Eye"
+    "## Exploring the Human Eye\n",
+    "\n",
+    "Our eyes are very similar to the magnifying glass at the beginning of this notebook. Both the magnifying glass and our eyes use a **convex** lens to form images. In the magnifying glass, the distance from the object was usually pretty close. With our eyes, the distance to the object is usually much farther than it would be for the magnifying glass.\n",
+    "\n",
+    "Images are formed in our eyes when light first passes through a transparent (see-through) layer called the *cornea*. This layer bends the light a little, but not very much. Next, the light passes through the *lens*. The lens is convex, and focuses the light onto a layer of light receptor cells at the back of the eyeball called the *retina*. The retina converts the light energy into electrical signals which get sent down the *optic nerve* into the brain.\n",
+    "\n",
+    "When we look at another person's eye, we see the colour of their eyes. The colored part is a muscle called the *iris*. A black circle in the middle of the iris is actually the hole that lets light through. This hole is called the *pupil*. When there is lots of light (like on a bright, sunny day), the iris **contracts**. This makes the pupil smaller so less light gets through. When there is not much light (like at night), the iris **dilates**. This makes the pupil get bigger so more light gets through. The iris is very important, since too much light getting through when it is very bright can damage your eyes.\n",
+    "\n",
+    "Let's take a look at the human eye in 3D."
    ]
   },
   {
@@ -291,7 +299,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other animals have eyes. Are they the same as human eyes?"
+    "### Other animals have eyes. Are they the same as human eyes?\n",
+    "\n",
+    "We talk about people with good eyesight having 'eagle eyes', or a camera having a 'fish-eye' lens. Also, if you've ever caught a fly and looked really close at its head, you've probably noticed that its eyes look very different from ours. So what's the difference between an animal's eyes and ours? Is anything the same? Let's take a look."
    ]
   },
   {
