--- a/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -23,6 +23,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script src=\"https://cdn.geogebra.org/apps/deployggb.js\"></script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<script src=\"https://cdn.geogebra.org/apps/deployggb.js\"></script>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,9 +229,59 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"ggb-convex-lens\"></div>\n",
+       "\n",
+       "<script>\n",
+       "  var ggbApp = new GGBApplet({\n",
+       "      \"height\": 640,\n",
+       "      \"showToolBar\": false,\n",
+       "      \"showMenuBar\": false,\n",
+       "      \"showAlgebraInput\": false,\n",
+       "      \"showResetIcon\": true,\n",
+       "      \"enableLabelDrags\": false,\n",
+       "      \"enableRightClick\": false,\n",
+       "      \"enableShiftDragZoom\": true,\n",
+       "      \"useBrowserForJS\": false,\n",
+       "      \"filename\": \"scripts/convex_lens.ggb\"\n",
+       "  }, 'ggb-convex-lens');\n",
+       "\n",
+       "  ggbApp.inject();\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Formation of real images Geogebra applet."
+    "%%html\n",
+    "\n",
+    "<div id=\"ggb-convex-lens\"></div>\n",
+    "\n",
+    "<script>\n",
+    "  var ggbApp = new GGBApplet({\n",
+    "      \"height\": 640,\n",
+    "      \"showToolBar\": false,\n",
+    "      \"showMenuBar\": false,\n",
+    "      \"showAlgebraInput\": false,\n",
+    "      \"showResetIcon\": true,\n",
+    "      \"enableLabelDrags\": false,\n",
+    "      \"enableRightClick\": false,\n",
+    "      \"enableShiftDragZoom\": true,\n",
+    "      \"useBrowserForJS\": false,\n",
+    "      \"filename\": \"scripts/convex_lens.ggb\"\n",
+    "  }, 'ggb-convex-lens');\n",
+    "\n",
+    "  ggbApp.inject();\n",
+    "</script>"
    ]
   },
   {
@@ -369,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
