Removed magnifying glass example

--- a/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,158 +64,7 @@
    "source": [
     "# Background\n",
     "\n",
-    "To start our exploration of the human eye, let's first look at a very simple tool that you have probably used. We present: the magnifying glass!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script type=\"text/javascript\" src=\"scripts/processing.min.js\"></script> \n",
-       "<script type=\"text/javascript\">\n",
-       "  var processingCode = ` \n",
-       "PImage mascara;  \n",
-       "PImage magnified, normal;\n",
-       "\n",
-       "void setup() {\n",
-       "  size(400, 400);\n",
-       " // mascara=createGraphics(300, 300);\n",
-       "  makeImages();\n",
-       "  background(255);\n",
-       "  noCursor();\n",
-       "}\n",
-       "\n",
-       "\n",
-       "void makeImages() {  //draw and store the two images that will be used\n",
-       "  noStroke();\n",
-       "  translate(width/2, height/2);\n",
-       "  alvos();\n",
-       "  normal=get(); \n",
-       "  scale(1.5);\n",
-       "  alvos();\n",
-       "  magnified=get();\n",
-       "}\n",
-       "\n",
-       "void alvos() {\n",
-       "  background(255);\n",
-       "  for (int i=5; i>0; i--) {\n",
-       "    fill(200, 0, 0);\n",
-       "    ellipse(0, 0, i*40, i*40);\n",
-       "    fill(255);\n",
-       "    ellipse(0, 0, i*40-20, i*40-20);\n",
-       "  }\n",
-       "}\n",
-       "\n",
-       "void draw() {\n",
-       "\n",
-       "  //this draws a circle in an alternate canvas that will be the mask\n",
-       "\n",
-       "background(255);\n",
-       "fill(0);\n",
-       "ellipse(mouseX, mouseY, 80, 80);\n",
-       "mascara=get();\n",
-       "  //mascara.endDraw();\n",
-       "  normal.mask(mascara);  //aplies the mask to the image, the image now has a hole on it\n",
-       "\n",
-       "  background(255);\n",
-       "  image(magnified, -(mouseX-width/2)/1.9, -(mouseY-height/2)/1.9);   //draws the magnified image underneath the normal image and adjusts its position \n",
-       "  image(normal, 0, 0);   //draws the normal image\n",
-       "\n",
-       "  strokeWeight(5);\n",
-       "  noFill();\n",
-       "  stroke(150, 0, 0);\n",
-       "  ellipse(mouseX, mouseY, 80, 80); // draws the \"lens circle\"\n",
-       "}\n",
-       "`;\n",
-       "  var myCanvas = document.getElementById(\"canvas1\");\n",
-       "  var jsCode = Processing.compile(processingCode);\n",
-       "  var processingInstance = new Processing(myCanvas, jsCode);\n",
-       " </script>\n",
-       "<canvas id=\"canvas1\"> </canvas>    \n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "magnify = \"\"\" \n",
-    "PImage mascara;  \n",
-    "PImage magnified, normal;\n",
-    "\n",
-    "void setup() {\n",
-    "  size(400, 400);\n",
-    " // mascara=createGraphics(300, 300);\n",
-    "  makeImages();\n",
-    "  background(255);\n",
-    "  noCursor();\n",
-    "}\n",
-    "\n",
-    "\n",
-    "void makeImages() {  //draw and store the two images that will be used\n",
-    "  noStroke();\n",
-    "  translate(width/2, height/2);\n",
-    "  alvos();\n",
-    "  normal=get(); \n",
-    "  scale(1.5);\n",
-    "  alvos();\n",
-    "  magnified=get();\n",
-    "}\n",
-    "\n",
-    "void alvos() {\n",
-    "  background(255);\n",
-    "  for (int i=5; i>0; i--) {\n",
-    "    fill(200, 0, 0);\n",
-    "    ellipse(0, 0, i*40, i*40);\n",
-    "    fill(255);\n",
-    "    ellipse(0, 0, i*40-20, i*40-20);\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "void draw() {\n",
-    "\n",
-    "  //this draws a circle in an alternate canvas that will be the mask\n",
-    "\n",
-    "background(255);\n",
-    "fill(0);\n",
-    "ellipse(mouseX, mouseY, 80, 80);\n",
-    "mascara=get();\n",
-    "  //mascara.endDraw();\n",
-    "  normal.mask(mascara);  //aplies the mask to the image, the image now has a hole on it\n",
-    "\n",
-    "  background(255);\n",
-    "  image(magnified, -(mouseX-width/2)/1.9, -(mouseY-height/2)/1.9);   //draws the magnified image underneath the normal image and adjusts its position \n",
-    "  image(normal, 0, 0);   //draws the normal image\n",
-    "\n",
-    "  strokeWeight(5);\n",
-    "  noFill();\n",
-    "  stroke(150, 0, 0);\n",
-    "  ellipse(mouseX, mouseY, 80, 80); // draws the \"lens circle\"\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "html_template = \"\"\"\n",
-    "<script type=\"text/javascript\" src=\"scripts/processing.min.js\"></script> \n",
-    "<script type=\"text/javascript\">\n",
-    "  var processingCode = `{}`;\n",
-    "  var myCanvas = document.getElementById(\"canvas1\");\n",
-    "  var jsCode = Processing.compile(processingCode);\n",
-    "  var processingInstance = new Processing(myCanvas, jsCode);\n",
-    " </script>\n",
-    "<canvas id=\"canvas1\"> </canvas>    \n",
-    "\"\"\"\n",
-    "\n",
-    "html_code = html_template.format(magnify)\n",
-    "HTML(html_code)"
+    "To start our exploration of the human eye, let's first look at something called a *double convex lens*. Using a double convex lens, a *real image* can be formed."
    ]
   },
   {
@@ -227,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,12 +137,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explanation of real image diagram\n",
+    "In the diagram above, the yellow lines represent light rays. An object reflects light rays in lots of different directions. Some of the light is reflected towards the convex lens. When the light rays pass through the convex lens, they change direction. You can see how the light rays come together on the right side of the lens. This is the point where the *real image* is formed. Because of the way the lens changes the direction of the light rays, the *real image* on the right side of the lens is upside down. \n",
+    "\n",
+    "Let's try to understand this more completely, because the diagram only shows three light rays coming away from the object. In real life, there would be millions more (infinitely more, in fact) light rays coming off of the object. Let's say that the object was a car. All of the light rays that reflected off of the car's wheel would pass through the lens, get flipped upside down, and form a *real image* of the wheel on the other side of the lens. The same thing would happen to all parts of the car. \n",
+    "\n",
+    "It may seem strange that the real image gets flipped upside down. \n",
     "\n",
     "### Questions\n",
     "<ol>\n",
     "    <li> What happens to the image when the lens is farther from the object? </li>\n",
     "    <li> What happens to the image when the lens is close to the object? </li>\n",
+    "    <li> Try moving the focal length (the point labeled F) to the other side of the lens. Is the real image upside down anymore? </li>\n",
     "</ol>"
    ]
   },
@@ -306,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,17 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:OCC.Display.backend:backend loaded: qt-pyqt5\n",
-      "INFO:OCC.Display.SimpleGui:GUI backend set to: qt-pyqt5\n",
-      "Layer manager created\n",
-      "Layer dimensions: 1024, 768\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'OCC'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-030434c1e2ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\"\"\" Human eye 3D explorer. \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mOCC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSimpleGui\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minit_display\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mOCC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBRepPrimAPI\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBRepPrimAPI_MakeBox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mOCC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSTEPControl\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSTEPControl_Reader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'OCC'"
      ]
     }
    ],
@@ -381,20 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Exploring eyes of other animals.'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" Exploring eyes of other animals.\"\"\""
    ]
